--- a/.github/workflows/main_deepseekmodel.yml
+++ b/.github/workflows/main_deepseekmodel.yml
@@ -39,7 +39,8 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip backend/ static/
+
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -81,5 +82,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'Deepseekmodel'
-          slot-name: 'Production'
+          package: release.zip
           
