--- a/.github/workflows/main_deepseekmodel.yml
+++ b/.github/workflows/main_deepseekmodel.yml
@@ -1,25 +1,19 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - Deepseekmodel
+name: Build and Deploy Python App to Azure Web App
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
@@ -28,37 +22,30 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install uvicorn
-          pip install --no-cache-dir -r backend/requirements.txt
-
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+          pip install -r requirements.txt
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip backend/ static/
-
-
-      - name: Upload artifact for deployment jobs
+        run: |
+          mkdir package
+          cp -r * ./package/
+          cd package
+          tar -czf ../release.tar.gz .
+          
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.tar.gz
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: ${{ steps.deploy-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -66,38 +53,10 @@ jobs:
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_580BD8689984472DAEC4A5671E249635 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_27FB559A917E4CF0AE555B467A42C8D0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03CA3EB2E18F447292E1AA8680E8430F }}
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'Deepseekmodel'
-          package: release.zip
-          
-      - name: Create startup.sh
-        run: |
-          echo '#!/bin/bash' > $GITHUB_WORKSPACE/startup.sh
-          echo 'cd /home/site/wwwroot' >> $GITHUB_WORKSPACE/startup.sh
-          echo 'source venv/bin/activate' >> $GITHUB_WORKSPACE/startup.sh
-          echo 'exec uvicorn main:app --host=0.0.0.0 --port=8000 --workers 1' >> $GITHUB_WORKSPACE/startup.sh
-          chmod +x $GITHUB_WORKSPACE/startup.sh
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
+      - name: Deploy to Azure Web App
         id: deploy-webapp
+        uses: azure/webapps-deploy@v3
         with:
-            app-name: 'Deepseekmodel'
-            package: './output.tar.gz'  # Asegúrate de que este archivo contiene tu solución
-            slot-name: 'Production'
-        
-        
+          app-name: 'Deepseekmodel'  # Replace with your actual app name
+          package: 'release.tar.gz'
+          restart-policy: always
