--- a/.github/workflows/main_deepseekmodel.yml
+++ b/.github/workflows/main_deepseekmodel.yml
@@ -1,14 +1,13 @@
-name: Build and deploy Python app to Azure App Service
+name: Build and deploy Python app to Azure
 
 on:
   push:
     branches:
-      - main  # Adjust this to match your main branch name
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -16,47 +15,43 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: 3.x
 
-      - name: Create Virtual Environment
-        run: python -m venv venv
-
-      - name: Activate and Install Dependencies
+      - name: Install dependencies
         run: |
+          python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r backend/requirements.txt
-
-      - name: Prepare Artifact
+          
+      - name: Create Deployment Package
         run: |
-          mkdir package
+          mkdir -p package
           cp -r backend/* package/
-          cp -r venv package/venv/
-          touch package/__init__.py  # Ensures folder is not empty
+          cp -r venv package/venv
+          zip -r release.zip package
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-artifact
-          path: package/
+          name: release-artifact
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-webapp.outputs.webapp-url }}
-
     steps:
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: output-artifact
-          path: deploy/
+          path: output-folder
 
       - name: Deploy to Azure Web App
         id: deploy-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Deepseekmodel'
-          package: './deploy'
+          package: 'deploy/release.zip'
+
+Try this updated workflow and let me know if you still face any issues!
