--- a/.github/workflows/main_deepseekmodel.yml
+++ b/.github/workflows/main_deepseekmodel.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Python app to Azure
+name: Build and Deploy Python App to Azure
 
 on:
   push:
@@ -12,45 +12,42 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Create and activate virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install --upgrade pip
           pip install -r backend/requirements.txt
-          
+
       - name: Create Deployment Package
         run: |
           mkdir -p package
           cp -r backend/* package/
-          cp -r venv package/venv
-          zip -r release.zip package
+          cp -r venv package/venv  # No es recomendable, mejor instala dependencias en Azure
 
-      - name: Upload Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: release-artifact
-          path: release.zip
+          name: release-artifact  # Nombre corregido para coincidir con la descarga
+          path: package/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download Artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: output-artifact
-          path: output-folder
+          name: release-artifact  # Asegúrate que sea el mismo nombre que arriba
+          path: package
 
       - name: Deploy to Azure Web App
         id: deploy-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'Deepseekmodel'
-          package: 'deploy/release.zip'
-
+          app-name: "tu-app-name"  # Reemplaza con el nombre de tu Azure Web App
+          package: package/
