--- a/.github/workflows/main_deepseekfuncstatic.yml
+++ b/.github/workflows/main_deepseekfuncstatic.yml
@@ -4,6 +4,7 @@
 
 name: Build and deploy Python project to Azure Function App - deepseekfuncstatic
 
+
 on:
   push:
     branches:
@@ -11,14 +12,15 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.10' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'release.zip' # Nombre del paquete a desplegar
+  AZURE_FUNCTIONAPP_NAME: 'staticfunctiondeepseek' # Nombre de la Function App en Azure
+  PYTHON_VERSION: '3.10' # Versión de Python utilizada
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Requerido para acciones de checkout
 
     steps:
       - name: Checkout repository
@@ -35,27 +37,28 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+         cd backend
+         pip install -r requirements.txt
 
-      # Optional: Add step to run tests here
+      # - name: Run tests (Opcional)
+      #   run: pytest tests/
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./* -x "venv/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # Requerido para autenticación con Azure
+      contents: read # Requerido para checkout
 
     steps:
       - name: Download artifact from build job
@@ -65,6 +68,9 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip     
+
+      - name: Login to Azure
+        uses: azure/login@v2
         
       - name: Login to Azure
         uses: azure/login@v2
